[debian/changelog] Fixing incorrect package name on changelog.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-PACKAGE (22.04) UNRELEASED; urgency=medium
+libdqrobotics-interface-qpoases (22.04) UNRELEASED; urgency=medium
 
   * Initial release. 
 
